# FastAPI-admin

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  run.py  settings.py
alembic/: env.py
alembic/versions/: 1951c53152d0_init.py  20bcb4957d69_role_添加一个permission字段1.py  c275a5284095_role_添加一个permission字段.py  e060c22f54b7_创建一个登录用户.py
apps/base/: schemas.py  urls.py
apps/dept/: models.py  schemas.py  urls.py
apps/login/: urls.py
apps/role/: models.py  schemas.py  urls.py
apps/user/: models.py  schemas.py  urls.py
apps/user_role_association/: models.py  schemas.py  urls.py
common/: jwt_utils.py  passlib_utils.py
database/: database.py  models.py
notes/: 00.RESTful和RPC风格介绍.md  01.python中的类型声明.py  02.pydantic的简单使用.py  03.ORM对象关系映射库介绍.md  04.python开发用到的库.md  05.Docker 制作离线镜像包.md
schemas/: __init__.py  response_models.py  user.py
