[project]
name = "fastapi-admin"
version = "0.1.0"
description = ""
authors = [
    {name = "chuhx",email = "chuhx1024@126.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "black (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
